[package]
name = "norgopolis-client"
description = "A Rust client for Norgopolis."
repository = "https://github.com/nvim-neorg/norgopolis-client"
version = "0.4.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
norgopolis-protos = "0.3.0"
prost = "0.11.9"
rmp = "0.8.11"
rmp-serde = "1.1.1"
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.9.2"

[features]
default = []
autostart-server = []
